# diff_drive_mapping_robot

./: README.md  install_wiringPi.sh  remote_env.sh
PCB - KiCad/Robot_MGR/: Robot_MGR-cache.lib  Robot_MGR.kicad_pcb  Robot_MGR.pro  Robot_MGR.sch  Robot_MGR2.net
diff_drive_mapping_robot/: CMakeLists.txt  package.xml
diff_drive_mapping_robot/config/: control.yaml  controller_common.yaml
diff_drive_mapping_robot/include/: MotorCommands.h  Sonar.h  TransformFrames.h  TwoWheeledInterface.h
diff_drive_mapping_robot/launch/: robot.launch  robot_offline.launch
diff_drive_mapping_robot/src/: MotorCommands.cpp  Sonar.cpp  TransformFrames.cpp  TwoWheeledInterface.cpp  battery_state_broadcaster.cpp  controller_manager_node.cpp  encoder_counter.cpp  measurer_range.cpp  motor_commands_node.cpp  rgb_led_manager.cpp  sonar_filter_node.cpp  tf_broadcaster.cpp
diff_drive_mapping_robot/urdf/: diff_drive_robot.urdf  slam_navi_settings.rviz
diff_drive_mapping_robot_controller/: CMakeLists.txt  package.xml
diff_drive_mapping_robot_controller/config/: controller_params.yaml
diff_drive_mapping_robot_controller/launch/: velocity_controller.launch
diff_drive_mapping_robot_navigation/: CMakeLists.txt  package.xml
diff_drive_mapping_robot_navigation/config/: costmap_common_params.yaml  costmap_exploration.yaml  costmap_global_params.yaml  costmap_local_params.yaml  move_base_params.yaml  planner_params.yaml  range_sensor_layer.yaml  static_map_params.yaml
diff_drive_mapping_robot_navigation/launch/: explore.launch  nav.launch  save_map.launch
diff_drive_mapping_robot_navigation/map/: ddmr_map.pgm  ddmr_map.yaml
diff_drive_mapping_robot_navigation/src/: move_base_limiter.cpp  send_robot_goal.cpp
