<?xml version="1.0"?>
<package format="2">
  <name>diff_drive_mapping_robot</name>
  <version>0.9.0</version>
  <description>The package is a ROS driver for the differential drive robot I built as a part of my MSc thesis. The main control unit of the robot is a Raspberry Pi 3 microcomputer. The robot's tasks are divided between 2 machines - another one is a PC</description>

  <maintainer email="karwowsj@ee.pw.edu.pl">Jaroslaw Karwowski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>controller_manager</build_depend>

  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>ros_control</build_export_depend>
  <build_export_depend>ros_controllers</build_export_depend>

  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
