<?xml version="1.0"?>
<package format="2">
  <name>diff_drive_mapping_robot_controller</name>
  <version>1.0.0</version>

  <description>The package is a ROS driver for the differential drive robot I built as a part of my MSc thesis. The main control unit of the robot is a Raspberry Pi 3 microcomputer. The robot's tasks are divided between 2 machines - another one is a PC</description>

  <maintainer email="karwowsj@ee.pw.edu.pl">Jaroslaw Karwowski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pid</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>pid</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>pid</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
